--- a/RickAndMortyViewer/Views/CharacterList/CharacterCell/CharacterCell.xib
+++ b/RickAndMortyViewer/Views/CharacterList/CharacterCell/CharacterCell.xib
@@ -18,8 +18,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="113"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rYA-rf-Jv4">
-                        <rect key="frame" x="12" y="12" width="89" height="89"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="photo.artframe" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="rYA-rf-Jv4">
+                        <rect key="frame" x="12" y="13.666666666666664" width="89" height="86"/>
                         <color key="backgroundColor" systemColor="systemGray5Color"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="rYA-rf-Jv4" secondAttribute="height" multiplier="1:1" id="KZh-TV-sFm"/>
@@ -44,15 +44,16 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="iconImage" destination="rYA-rf-Jv4" id="GU0-hT-pVa"/>
+                <outlet property="iconImage" destination="rYA-rf-Jv4" id="S6R-DK-ta8"/>
                 <outlet property="titleLabel" destination="1NH-vI-nmz" id="mIg-ix-Fnl"/>
             </connections>
             <point key="canvasLocation" x="117.55725190839694" y="-8.0985915492957758"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="photo.artframe" catalog="system" width="128" height="93"/>
         <systemColor name="systemGray5Color">
-            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
