--- a/RickAndMortyViewer/Views/CharacterList/CharacterCell/CharacterCell.xib
+++ b/RickAndMortyViewer/Views/CharacterList/CharacterCell/CharacterCell.xib
@@ -26,7 +26,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1NH-vI-nmz">
-                        <rect key="frame" x="109" y="12" width="48" height="89"/>
+                        <rect key="frame" x="117" y="12" width="48" height="89"/>
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -37,7 +37,7 @@
                     <constraint firstItem="1NH-vI-nmz" firstAttribute="top" secondItem="rYA-rf-Jv4" secondAttribute="top" id="H4x-K0-gEx"/>
                     <constraint firstItem="rYA-rf-Jv4" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="JoB-LH-NzP"/>
                     <constraint firstAttribute="bottom" secondItem="rYA-rf-Jv4" secondAttribute="bottom" constant="12" id="OTs-x1-ZOI"/>
-                    <constraint firstItem="1NH-vI-nmz" firstAttribute="leading" secondItem="rYA-rf-Jv4" secondAttribute="trailing" constant="8" symbolic="YES" id="UTy-K4-GIB"/>
+                    <constraint firstItem="1NH-vI-nmz" firstAttribute="leading" secondItem="rYA-rf-Jv4" secondAttribute="trailing" constant="16" id="UTy-K4-GIB"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1NH-vI-nmz" secondAttribute="trailing" constant="12" id="Xh7-bd-jr1"/>
                     <constraint firstItem="1NH-vI-nmz" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="i7G-Cm-QEQ"/>
                 </constraints>
@@ -53,7 +53,7 @@
     <resources>
         <image name="photo.artframe" catalog="system" width="128" height="93"/>
         <systemColor name="systemGray5Color">
-            <color red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
